# pkmn-stock

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: dashboard.py
cpp/: CMakeLists.txt
cpp/bindings/: module.cpp
cpp/src/pkmn_engine/: backtest.cpp  backtest.hpp  costs.hpp  execution.cpp  execution.hpp  market.cpp  market.hpp  numeric.hpp  portfolio.cpp  portfolio.hpp  strategy.hpp  types.hpp  version.cpp  version.hpp
cpp/src/pkmn_engine/strategies/: buy_and_hold.cpp  buy_and_hold.hpp  callback.hpp  cost_aware_reversion.cpp  cost_aware_reversion.hpp  dip_buyer.cpp  dip_buyer.hpp  factory.cpp  factory.hpp  momentum.cpp  momentum.hpp  sealed_accumulation.cpp  sealed_accumulation.hpp
cpp/tests/: test_backtest_golden.cpp  test_concurrency.cpp  test_costs.cpp  test_insertion_map.cpp  test_market.cpp  test_portfolio.cpp  test_strategies.cpp  test_version.cpp
docs/: research-findings-2026-07.md
docs/superpowers/plans/: 2026-06-10-data-foundation.md  2026-07-01-backtest-engine.md  2026-07-03-research-layer.md  2026-07-04-live-signals-dashboard-readme.md  2026-07-06-reinvest-loop.md  2026-07-06-short-horizon-research.md  2026-07-11-ml-ranker.md  2026-07-11-paper-dashboard-cleanup.md  2026-07-13-impact-and-runs.md  2026-07-14-cpp-engine.md  2026-07-17-parallel-walkforward.md  2026-07-18-readme-revamp.md  2026-07-18-rigor-pack.md  2026-07-19-ml-ranker-v2.md  2026-07-22-web-explorer.md
docs/superpowers/specs/: 2026-06-09-pkmn-quant-design.md  2026-07-06-reinvest-loop-design.md  2026-07-06-short-horizon-research-design.md  2026-07-11-ml-ranker-design.md  2026-07-11-paper-dashboard-cleanup-design.md  2026-07-13-impact-costs-experiment-tracking-design.md  2026-07-14-cpp-engine-design.md  2026-07-17-parallel-walkforward-design.md  2026-07-18-readme-revamp-design.md  2026-07-18-rigor-pack-design.md  2026-07-19-ml-ranker-v2-design.md  2026-07-22-web-explorer-design.md
scripts/: bench_engines.py  bench_walkforward.py  com.pkmn-quant.daily.plist  parity_full.py  render_readme_chart.py
src/pkmn_quant/: __init__.py  _engine.pyi  cli.py  config.py
src/pkmn_quant/api/: __init__.py  app.py  data.py  models.py
src/pkmn_quant/data/: classify.py  ingest.py  quality.py  tcgcsv.py  transforms.py  warehouse.py
src/pkmn_quant/engine/: backtest.py  costs.py  data.py  execution.py  metrics.py  native.py  portfolio.py  prepared.py  quotes.py  strategy.py
src/pkmn_quant/live/: ledger.py  notify.py  paper.py  report.py  signals.py
src/pkmn_quant/research/: artifacts.py  features.py  folds.py  purged.py  (+6 more)
tests/: helpers.py  test_classify.py  test_cli_backtest.py  test_cli_daily.py  test_cli_evaluate.py  test_cli_paper.py  test_cli_portfolio.py  test_cli_runs.py  test_cli_signals.py  test_cli_walkforward.py  test_config.py  test_dashboard.py  test_ingest.py  test_native_import.py  test_native_parity.py  test_quality.py  test_tcgcsv.py  test_transforms.py  test_warehouse.py
tests/api/: conftest.py  test_contract.py  test_detail.py  test_runs.py
tests/engine/: test_backtest.py  test_costs.py  test_data.py  test_execution.py  test_from_frame.py  test_metrics.py  test_portfolio.py  test_strategy.py
tests/live/: test_ledger.py  test_notify.py  test_paper.py  test_report.py  test_signals.py
tests/research/: test_artifacts.py  test_features.py  test_folds.py  test_purged.py  test_registry.py  test_report.py  test_runs.py  test_search.py  test_stats.py  test_walkforward.py  test_walkforward_parallel.py
tests/strategies/: test_buy_and_hold.py  test_cost_aware_reversion.py  test_dip_buyer.py  test_ml_ranker.py  test_ml_ranker_v2.py  test_momentum.py  test_sealed_accumulation.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  theme.ts
(+23 files in other folders)
