[project]
name = "pkmn-quant"
version = "0.1.0"
description = "Backtesting and signal generation for Pokemon card prices"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "httpx>=0.27",
    "numpy>=1.26",
    "optuna>=4.0",
    "polars>=1.10",
    "py7zr>=1.1.0",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "typer>=0.12",
]

[project.scripts]
pkmn = "pkmn_quant.cli:app"

[dependency-groups]
dashboard = [
    "streamlit>=1.40",
]
dev = [
    "hypothesis>=6.100",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]
viz = ["matplotlib>=3.9"]
api = ["fastapi>=0.115", "uvicorn>=0.32", "httpx>=0.27"]

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.10"
cmake.version = ">=3.26"
cmake.build-type = "Release"
cmake.source-dir = "cpp"
wheel.packages = ["src/pkmn_quant"]
build-dir = "build/{wheel_tag}"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/pkmn_quant/cli.py" = ["B008"]

[tool.mypy]
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
